# EF-Calib

./: .gitignore  LICENSE  README.md  run.sh
calibration_pattern_creator/: paint.m
circle_detector/: CMakeLists.txt  package.xml
circle_detector/include/: circle_detector.h  cylindroid_factor.h
circle_detector/launch/: circle_detector.launch
circle_detector/src/: circle_detector.cpp
circle_msgs/: CMakeLists.txt  package.xml
circle_msgs/msg/: circle.msg  circleArray.msg
config/: setup.yaml
corner_detector/: CMakeLists.txt  package.xml
corner_detector/include/: corner_detector.h
corner_detector/launch/: corner_detector.launch
corner_detector/src/: corner_detector.cpp
corner_msgs/: CMakeLists.txt  package.xml
corner_msgs/msg/: corner.msg  cornerArray.msg
estimator/: CMakeLists.txt  package.xml
estimator/include/: calibration_board.h  camera.h  estimator_manager.h  initialization.h  trajectory_estimator.h  trajectory_manager.h  trajectory_viewer.h
estimator/include/factor/: ceres_local_param.h
estimator/include/factor/analytic_diff/: image_feature_factor.h  rd_spline_view.h  so3_spline_view.h  split_spline_view.h  trajectory_value_factor.h
estimator/launch/: estimator.launch
estimator/rviz/: estimator.rviz
estimator/src/: estimator_node.cpp
estimator/src/estimator/: estimator_manager.cpp  initialization.cpp  trajectory_estimator.cpp  trajectory_manager.cpp
estimator/src/spline/: ceres_spline_helper.h  ceres_spline_helper_jet.h  rd_spline.h  se3_spline.h  so3_spline.h  spline_common.h  spline_segment.h  trajectory.cpp  trajectory.h
estimator/src/utils/: math_utils.h  mypcl_cloud_type.h  parameter_struct.h  sophus_utils.hpp  yaml_utils.h
eventmap_generator/: CMakeLists.txt  package.xml
eventmap_generator/include/: generator.h
eventmap_generator/launch/: generator.launch
eventmap_generator/msg/: eventmap.msg
eventmap_generator/src/: generator.cpp  generator_node.cpp
record_bag/: circle_info.bag  corner_info.bag
